Added components for the Selection Window

--- a/src/global-styles.scss
+++ b/src/global-styles.scss
@@ -1,4 +1,5 @@
 $primary-color: #FF8800;
+$primary-disabled-color: #FF8800AA;
 $secondary-color: #FFFFFF;
 $bg-color-primary: #000000EE;
 $bg-color-secondary: #00000000;
