Highlight previous actors when hover a token

--- a/src/global-styles.scss
+++ b/src/global-styles.scss
@@ -1,6 +1,7 @@
 $primary-color: #FF8800;
 $primary-disabled-color: #FF8800AA;
 $secondary-color: #FFFFFF;
+$secondary-disabled-color: #FFFFFF55;
 $bg-color-primary: #000000EE;
 $bg-color-secondary: #00000000;
 
