Add configuration window and toolbox button to access configuration

--- a/src/global-styles.scss
+++ b/src/global-styles.scss
@@ -4,7 +4,8 @@ $secondary-color: #FFFFFF;
 $secondary-disabled-color: #FFFFFF55;
 $error-color: #FF3300;
 $bg-color-primary: #000000EE;
-$bg-color-secondary: #00000000;
+$bg-color-table-item-odd: #181818EE;
+$bg-color-table-item-even: #202020EE;
 
 .button {
   background: $bg-color-primary;
