--- a/src/view/tippy-action/tippy-custom.scss
+++ b/src/view/tippy-action/tippy-custom.scss
@@ -19,7 +19,7 @@
   white-space: normal;
   outline: 0;
   transition-property: transform, visibility, opacity;
-  padding: 5px;
+  padding: 5px 10px;
   border: 1.5px solid $primary-color;
 }
 
